# Pre-Call-Intelligence-Briefing-Engine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.toml
.github/workflows/: auto-merge-claude.yml  deploy-railway.yml
app/: api.py  config.py  models.py
app/brief/: decision_leverage.py  evidence_graph.py  generator.py  pipeline.py  profiler.py  qa.py  renderer.py
app/cli/: main.py
app/clients/: apollo.py  calendar.py  fireflies.py  gmail.py  openai_client.py  pdl_client.py  serpapi.py
app/ingest/: calendar_ingest.py  fireflies_ingest.py  gmail_ingest.py  gmail_meeting_enrichment.py
app/normalize/: embeddings.py  entity_resolver.py
app/retrieve/: retriever.py
app/services/: action_items.py  artifact_dossier.py  enrichment_service.py  (+3 more)
migrations/: 001_initial_schema.sql  002_postgres_railway.sql  003_enable_pgvector.sql  004_citation_offsets_and_gates.sql  005_photo_and_calendar.sql  006_pdl_enrichment.sql  007_canonical_columns.sql  008_projects_actions_calendar.sql
scripts/: apply_migrations_remote.py  railway-bootstrap.sh  railway-shared-keys.example  railway-sync-vars.sh  run_migrations.py  setup_gmail_oauth.py
tests/: conftest.py  test_api.py  test_artifact_dossier.py  test_calendar_ingest.py  test_citations.py  test_decision_leverage.py  test_deep_research.py  test_entity_matching.py  test_evidence_graph.py  test_gates.py  test_ingestion.py  test_linkedin_disambiguation.py  test_linkedin_pdf.py  test_pdl_enrichment.py  test_photo_resolution.py  test_profiler.py  test_qa.py  test_retrieval.py  test_serpapi.py
(+3 files in other folders)
